# Franka_IITGN_ROBOTICS

./: README.md
franka_ros/: object_on_the_base.py  receiver.py  transformation.py
franka_ros/franka_example_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml
franka_ros/franka_example_controllers/config/: franka_example_controllers.yaml
franka_ros/franka_example_controllers/include/franka_example_controllers/: cartesian_velocity_example_controller.h
franka_ros/franka_example_controllers/launch/: cartesian_pose_point_controller.launch
franka_ros/franka_example_controllers/src/: cartesian_pose_example_controller.cpp  cartesian_pose_point_controller.cpp  cartesian_velocity_example_controller.cpp  close_gripper.cpp  set_collision_behavior.cpp
franka_ros/franka_iitgn/: CMakeLists.txt  package.xml
franka_ros/franka_iitgn/config/: franka_iitgn.yaml  franka_iitgn_plugin.xml
franka_ros/franka_iitgn/data/: b_01.csv  b_02.csv  b_03.csv  b_04.csv  b_05.csv  b_06.csv  b_07.csv  b_08.csv  b_09.csv  b_10.csv  b_11.csv  b_12.csv  b_13.csv  b_14.csv  b_15.csv  b_16.csv  b_17.csv  b_18.csv  b_19.csv  b_20.csv  b_21.csv  b_22.csv  b_23.csv  b_24.csv  b_25.csv  b_26.csv  b_27.csv  b_28.csv  b_29.csv  b_3.csv  b_30.csv  b_31.csv  b_32.csv  b_33.csv  b_34.csv  b_35.csv  b_36.csv  b_37.csv  b_38.csv  b_39.csv  (+19 more)
franka_ros/franka_iitgn/data01/: os_001.csv  os_002.csv  os_003.csv  os_004.csv  os_005.csv  os_006.csv  s_b_001.csv  s_b_002.csv  s_b_003.csv  s_b_004.csv  s_b_005.csv  s_b_006.csv  s_b_007.csv  s_b_008.csv  s_b_009.csv  s_b_010.csv  s_b_011.csv  s_b_012.csv  s_b_013.csv  s_b_014.csv  s_b_015.csv  s_b_016.csv  s_b_017.csv  s_b_018.csv  s_b_019.csv  s_b_020.csv  s_f_001.csv  s_f_002.csv  s_f_003.csv  s_f_004.csv  s_f_005.csv  s_f_006.csv  s_f_007.csv  s_f_008.csv  s_f_009.csv  s_f_010.csv  s_f_011.csv  s_f_012.csv  s_f_013.csv  s_f_014.csv  (+6 more)
franka_ros/franka_iitgn/data02/: joint_data.csv  os_001.csv  os_002.csv  os_003.csv  os_004.csv  s_b_001.csv  s_b_002.csv  s_b_003.csv  s_b_004.csv  s_b_005.csv  s_b_006.csv  s_b_007.csv  s_b_008.csv  s_b_009.csv  s_b_010.csv  s_b_011.csv  s_b_012.csv  s_b_013.csv  s_b_014.csv  s_f_001.csv
franka_ros/franka_iitgn/launch/: cartesian_controller_back.launch  cartesian_controller_front.launch  cartesian_pose_controller.launch
franka_ros/franka_iitgn/src/: cartesian_controller_back.cpp  cartesian_controller_front.cpp  cartesian_pose_controller.cpp  close_gripper.py  joint_state_logger.cpp  joint_state_logger.py
